--- a/upload/template/default/common/header_common.htm
+++ b/upload/template/default/common/header_common.htm
@@ -4,7 +4,7 @@
 	<meta charset="{CHARSET}" />
 	<meta name="renderer" content="webkit" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title><!--{if !empty($navtitle)}-->$navtitle <!--{/if}--><!--{if empty($nobbname)}--> - $_G['setting']['bbname'] <!--{/if}--></title>
+	<title><!--{if !empty($navtitle)}-->$navtitle - <!--{/if}--><!--{if empty($nobbname)}--> $_G['setting']['bbname'] - <!--{/if}--> Powered by Discuz!</title>
 	$_G['setting']['seohead']
 
 	<meta name="keywords" content="{if !empty($metakeywords)}{echo dhtmlspecialchars($metakeywords)}{/if}" />
