--- a/upload/template/default/touch/home/space_wall.htm
+++ b/upload/template/default/touch/home/space_wall.htm
@@ -3,7 +3,7 @@
 <div class="header cl">
 	<div class="mz"><a href="javascript:history.back();"><i class="dm-c-left"></i></a></div>
 	<h2>{lang message}</h2>
-	<div class="my"><a href="<!--{if $_G['setting']['mobile']['mobilehotthread']}--><!--{if !empty($_G['setting']['grid']['showgrid'])}-->forum.php<!--{else}-->forum.php?mod=guide&view=newthread<!--{/if}--><!--{else}-->forum.php?forumlist=1<!--{/if}-->"><i class="dm-house"></i></a></div>
+	<div class="my"><a href="index.php"><i class="dm-house"></i></a></div>
 </div>
 
 <div class="wall_list threadlist_box cl">
@@ -17,7 +17,7 @@
 					<!--{elseif $_G['connectguest']}-->
 						<div class="pt hm">{lang connect_fill_profile_to_comment}</div>
 					<!--{else}-->
-						<div class="pt hm">{lang login_to_wall} <a href="member.php?mod=logging&action=login" onclick="showWindow('login', this.href)" class="xi2">{lang login}</a> | <a href="member.php?mod={$_G['setting']['regname']}" class="xi2">$_G['setting']['reglinkname']</a></div>
+						<div class="pt hm">{lang login_to_wall} <a href="member.php?mod=logging&action=login" class="xi2 dialog">{lang login}</a> | <a href="member.php?mod={$_G['setting']['regname']}" class="xi2">$_G['setting']['reglinkname']</a></div>
 					<!--{/if}-->
 				</div>
 				<div class="moodfm_f">
