--- a/upload/uc_server/view/default/admin_frame_menu.htm
+++ b/upload/uc_server/view/default/admin_frame_menu.htm
@@ -6,12 +6,12 @@
 <style type="text/css">
 /* common */
 *{ word-wrap:break-word; outline:none; }
-body{ width:159px; background:#F2F9FD url(images/bg_repx_h.gif) right top no-repeat; color:#666; font:12px "Lucida Grande", Verdana, Lucida, Helvetica, Arial, "宋体" ,sans-serif; }
+body{ width:179px; background:#F2F9FD url(images/bg_repx_h.gif) right top no-repeat; color:#666; font:12px Arial ,sans-serif; }
 body, ul{ margin:0; padding:0; }
 a{ color:#2366A8; text-decoration:none; }
 	a:hover { text-decoration:underline; }
 .menu{ position:relative; z-index:20; }
-	.menu ul{ position:absolute; top:10px; right:-1px !important; right:-2px; list-style:none; width:150px; background:#F2F9FD url(images/bg_repx_h.gif) right -20px no-repeat; }
+	.menu ul{ position:absolute; top:10px; right:-1px !important; right:-2px; list-style:none; width:170px; background:#F2F9FD url(images/bg_repx_h.gif) right -20px no-repeat; }
 		.menu li{ margin:3px 0; *margin:1px 0; height:auto !important; height:24px; overflow:hidden; font-size:14px; font-weight:700; }
 		.menu li a{ display:block; margin-right:2px; padding:3px 0 2px 30px; *padding:4px 0 2px 30px; border:1px solid #F2F9FD; background:url(images/bg_repno.gif) no-repeat 10px -40px; color:#666; }
 			.menu li a:hover{ text-decoration:none; margin-right:0; border:1px solid #B5CFD9; border-right:1px solid #FFF; background:#FFF; }
