--- a/upload/uc_server/view/default/admin_frame_index.htm
+++ b/upload/uc_server/view/default/admin_frame_index.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset={UC_CHARSET}" />
-<title>UCenter Administrator's Control Panel</title>
+<title>Bảng điều khiển của Quản trị UCenter</title>
 <link rel="stylesheet" href="images/admincp.css" type="text/css" media="all" />
 <meta content="Comsenz Inc." name="Copyright" />
 </head>
@@ -12,7 +12,7 @@
 		<td colspan="2" height="69"><iframe src="{UC_ADMINSCRIPT}?m=frame&a=header&sid=$sid" name="header" width="100%" height="69" scrolling="no" frameborder="0"></iframe></td>
 	</tr>
 	<tr>
-		<td valign="top" width="160"><iframe src="{UC_ADMINSCRIPT}?m=frame&a=menu&sid=$sid" name="menu" target="main" width="160" height="100%" scrolling="no" frameborder="0"></iframe></td>
+		<td valign="top" width="180"><iframe src="{UC_ADMINSCRIPT}?m=frame&a=menu&sid=$sid" name="menu" target="main" width="180" height="100%" scrolling="no" frameborder="0"></iframe></td>
 		<td valign="top"><iframe src="$mainurl" name="main" width="100%" height="100%" frameborder="0" scrolling="yes" style="overflow:visible;"></iframe></td>
 	</tr>
 </table>
